enable docker auth

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_script:
   -in credentials.tar.enc -out credentials.tar -d
 - tar xvf credentials.tar
 - ls -la credentials
+- echo $docker_password | docker login --username jup014 --password-stdin
 - docker system prune -af
 - docker volume prune -f
 - docker-compose build server > /dev/null
