--- a/docker-compose.gcloud.yaml
+++ b/docker-compose.gcloud.yaml
@@ -6,6 +6,7 @@ services:
             dockerfile: client.Dockerfile
         env_file:
           - credentials/.env-production
+          - credentials/justwalk.env
         command: npm run serve:app
         volumes:
             - ./client:/client
@@ -45,6 +46,7 @@ services:
             dockerfile: server.Dockerfile
         env_file:
           - credentials/.env-production
+          - credentials/justwalk.env
         environment:
             - ALLOWED_HOSTS=localhost,server
             - DEBUG=True
