--- a/gcloud-dev-nginx.conf
+++ b/gcloud-dev-nginx.conf
@@ -36,6 +36,7 @@ http {
 
         server_name _;
 
+        ip_hash;
         # if ($http_x_forwarded_proto = "http") {
         #     return 301 https://heartsteps.net$request_uri;
         # }
