removed some justwalk.env's and copied to server directory

--- a/gcloud-dev.docker-compose.yaml
+++ b/gcloud-dev.docker-compose.yaml
@@ -48,6 +48,7 @@ services:
             dockerfile: server.Dockerfile
         env_file:
           - credentials/.env-gcloud-dev
+          - credentials/justwalk.env
         environment:
             - ALLOWED_HOSTS=localhost,server
             - DEBUG=True
