added day admin, changed ngix conf to block invalid request

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -32,6 +32,12 @@ http {
     index index.html;    
 
     server {
+        listen 443 ssl default_server;
+        server_name _;
+        return 444;
+    }
+
+    server {
         listen 8000;
 
         server_name _;
