--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -4,6 +4,12 @@ events {}
 
 http {
     server {
+        listen 443 ssl default_server;
+        server_name _;
+        return 444;
+    }
+
+    server {
 
         listen      8080 default_server;
         server_name _;
