--- a/gcloud-dev-nginx.conf
+++ b/gcloud-dev-nginx.conf
@@ -30,6 +30,12 @@ http {
     gzip_static on;
 
     index index.html;    
+    
+    server {
+        listen 443 ssl default_server;
+        server_name _;
+        return 444;
+    }
 
     server {
         listen 8000;
