changed nginx settings

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -32,18 +32,16 @@ http {
     index index.html;    
 
     server {
-        listen 443 ssl default_server;
-        server_name _;
-        return 444;
-    }
-
-    server {
         listen 8000;
 
         server_name _;
 
         if ($http_x_forwarded_proto = "http") {
             return 301 https://heartsteps.net$request_uri;
+        }
+
+        if ( $host !~* ^(heartsteps.net|dev.heartsteps.net)$ ) {
+           return 444;
         }
 
         location @404 {
