--- a/gcloud-dev-nginx.conf
+++ b/gcloud-dev-nginx.conf
@@ -30,12 +30,6 @@ http {
     gzip_static on;
 
     index index.html;    
-    
-    server {
-        listen 443 ssl default_server;
-        server_name _;
-        return 444;
-    }
 
     server {
         listen 8000;
@@ -51,6 +45,10 @@ http {
         }
 
         error_page 404 = @404;
+
+        if ( $host !~* ^(heartsteps.net|dev.heartsteps.net)$ ) {
+           return 444;
+        }
 
         location =/ {
             proxy_set_header Host storage.googleapis.com;
