--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -4,17 +4,15 @@ events {}
 
 http {
     server {
-        listen 443 ssl default_server;
-        server_name _;
-        return 444;
-    }
-
-    server {
 
         listen      8080 default_server;
         server_name _;
         charset     utf-8;
         include /etc/nginx/mime.types;
+
+        if ( $host !~* ^(heartsteps.net|dev.heartsteps.net)$ ) {
+           return 444;
+        }
 
         location /static/ {
             alias /server/static/;
