--- a/client/package.json
+++ b/client/package.json
@@ -35,7 +35,7 @@
         "@angular/platform-browser-dynamic": "5.2.11",
         "@angular/router": "5.2.11",
         "@ionic-native/core": "~4.17.0",
-        "@ionic-native/http": "~4.17.0",
+        "@ionic-native/http": "^4.17.0",
         "@ionic-native/in-app-browser": "~4.17.0",
         "@ionic-native/splash-screen": "~4.17.0",
         "@ionic-native/status-bar": "~4.17.0",
@@ -50,6 +50,7 @@
         "ionic-angular": "3.9.10",
         "ionicons": "3.0.0",
         "moment": "^2.29.1",
+        "nvm": "^0.0.4",
         "rxjs": "5.5.11",
         "sw-toolbox": "3.6.0",
         "tsc": "^2.0.3",
