included sdk version 22

--- a/.gitignore
+++ b/.gitignore
@@ -81,4 +81,5 @@ dev-credentials/.env-development
 dev-credentials/.env-gcloud-dev
 dev-credentials/gcloud-dev-service-account.json
 dev-credentials.tar.gpg
-client/app-debug.apk
+client/*.apk
+client/*.aab
