--- a/client/package.json
+++ b/client/package.json
@@ -65,7 +65,7 @@
         "@types/node": "^10.17.60",
         "cordova-icon": "^1.0.0",
         "cordova-ios": "^6.2.0",
-        "cordova-plugin-advanced-http": "^3.1.0",
+        "cordova-plugin-advanced-http": "^3.2.2",
         "cordova-plugin-customurlscheme": "^5.0.2",
         "cordova-plugin-device": "^2.0.3",
         "cordova-plugin-file": "^6.0.2",
@@ -129,9 +129,11 @@
             "cordova-plugin-device": {},
             "cordova-plugin-ionic-webview": {},
             "cordova-plugin-ionic-keyboard": {},
-            "cordova-plugin-advanced-http": {},
             "cordova-plugin-statusbar": {},
-            "cordova-plugin-safariviewcontroller": {}
+            "cordova-plugin-safariviewcontroller": {},
+            "cordova-plugin-advanced-http": {
+                "ANDROIDBLACKLISTSECURESOCKETPROTOCOLS": "SSLv3,TLSv1"
+            }
         },
         "platforms": [
             "android",
