--- a/client/package.json
+++ b/client/package.json
@@ -81,7 +81,7 @@
         "jest": "^23.6.0",
         "jest-preset-angular": "^6.0.2",
         "node-sass": "^6.0.0",
-        "onesignal-cordova-plugin": "^2.11.3",
+        "onesignal-cordova-plugin": "^3.0.1",
         "tslint": "^5.20.1",
         "typescript": "~2.6.2",
         "xml2js": "^0.4.23",
@@ -124,7 +124,6 @@
             },
             "cordova-plugin-inappbrowser": {},
             "cordova-plugin-splashscreen": {},
-            "onesignal-cordova-plugin": {},
             "cordova-plugin-whitelist": {},
             "cordova-plugin-device": {},
             "cordova-plugin-ionic-webview": {},
@@ -133,7 +132,8 @@
             "cordova-plugin-safariviewcontroller": {},
             "cordova-plugin-advanced-http": {
                 "ANDROIDBLACKLISTSECURESOCKETPROTOCOLS": "SSLv3,TLSv1"
-            }
+            },
+            "onesignal-cordova-plugin": {}
         },
         "platforms": [
             "android",
