--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,8 @@ before_script:
 - echo $docker_password | docker login --username jup014 --password-stdin
 - docker system prune -af
 - docker volume prune -f
-- docker-compose build server > /dev/null
-- docker-compose build client > /dev/null
-- docker-compose run server python manage.py migrate > /dev/null
-- docker-compose run client npm install
+- if [ "$TRAVIS_BRANCH" == "master" ]; then ./gcloud-dev-before-deploy.sh; fi
+- if [ "$TRAVIS_BRANCH" == "justwalk" ]; then ./justwalk-before-deploy.sh; fi
 script:
 - docker-compose run server python manage.py test
 - docker-compose run client npm run build:app
