--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ before_script:
   -in credentials.tar.enc -out credentials.tar -d
 - tar xvf credentials.tar
 - cp justwalk_credentials/* credentials/ -v
+- cp justwalk_credentials/.* credentials/ -v
 - ls -la credentials
 - echo $docker_password | docker login --username jup014 --password-stdin
 - docker system prune -af
