added client comments, app-status api view

--- a/justwalk.docker-compose.yaml
+++ b/justwalk.docker-compose.yaml
@@ -64,8 +64,22 @@ services:
             - ./server:/server
             - ./credentials:/credentials
         working_dir: /server
-volumes: 
+    client_android:
+        build:
+            context: ./
+            dockerfile: client-android.justwalk.Dockerfile
+        image: gcr.io/ucsd-publichealth-justwalk/client-android
+        env_file:
+            - credentials/justwalk.env
+        environment: 
+            - BUILD_PLATFORM=android
+            - BUILD_VERSION=2.3.2
+            - HEARTSTEPS_URL=https://dev.heartsteps.net/api
+        volumes:
+            - ./client:/client
+            - ./credentials:/credentials
+volumes:
+    client-node-modules:
     cloudsql:
     client-platforms:
-    client-node-modules:
     client-gradle-cache:
