--- a/docker-compose.client-build.yaml
+++ b/docker-compose.client-build.yaml
@@ -14,6 +14,7 @@ services:
     build:
       context: ./
       dockerfile: client-android.Dockerfile
+    image: gcr.io/ucsd-publichealth-justwalk/client-android
     env_file:
       - credentials/.env-production
     environment: 
