--- a/client/package.json
+++ b/client/package.json
@@ -42,7 +42,7 @@
         "@ionic/storage": "2.2.0",
         "axios": "^0.18.1",
         "cordova": "^10.0.0",
-        "cordova-android": "8.1.0",
+        "cordova-android": "^8.1.0",
         "cordova-inappbrowser": "^1.0.6",
         "d3": "^5.16.0",
         "firebase": "^5.11.1",
