--- a/client/package.json
+++ b/client/package.json
@@ -41,14 +41,16 @@
         "@ionic-native/status-bar": "~4.17.0",
         "@ionic/storage": "2.2.0",
         "axios": "^0.18.1",
+        "can-compile": "^0.11.0",
         "cordova": "^10.0.0",
-        "cordova-android": "8.1.0",
+        "cordova-android": "9.1.0",
         "cordova-inappbrowser": "^1.0.6",
         "d3": "^5.16.0",
         "firebase": "^5.11.1",
         "ionic": "^5.4.16",
         "ionic-angular": "3.9.10",
         "ionicons": "3.0.0",
+        "libvips": "0.0.2",
         "moment": "^2.29.1",
         "nvm": "^0.0.4",
         "rxjs": "5.5.11",
@@ -81,9 +83,9 @@
         "jest": "^23.6.0",
         "jest-preset-angular": "^6.0.2",
         "node-sass": "^6.0.0",
-        "onesignal-cordova-plugin": "^3.0.2",
+        "onesignal-cordova-plugin": "^3.0.3",
         "tslint": "^5.20.1",
-        "typescript": "~2.6.2",
+        "typescript": "^2.6.2",
         "xml2js": "^0.4.23",
         "xmlbuilder": "^13.0.2"
     },
@@ -136,8 +138,8 @@
             "onesignal-cordova-plugin": {}
         },
         "platforms": [
-            "android",
-            "ios"
+            "ios",
+            "android"
         ]
     }
 }
