--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
 - echo "deb http://packages.cloud.google.com/apt $CLOUD_SDK_REPO main" | sudo tee
   -a /etc/apt/sources.list.d/google-cloud-sdk.list
 - echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" | sudo tee -a /etc/apt/sources.list.d/kubernetes.list
-- sudo apt-get update && sudo apt-get install google-cloud-sdk kubectl
+- sudo apt-get update && sudo apt-get install google-cloud-sdk kubectl google-cloud-sdk-gke-gcloud-auth-plugin
 before_script:
 - openssl aes-256-cbc -K $justwalk_enc_key -iv $justwalk_enc_iv -in justwalk_credentials.tar.enc -out justwalk_credentials.tar -d
 - tar xvf justwalk_credentials.tar
@@ -22,6 +22,7 @@ before_script:
 - docker system prune -af
 - docker volume prune -f
 - if [ "$TRAVIS_BRANCH" == "master" ]; then ./gcloud-dev-before-deploy.sh; fi
+- if [ "$TRAVIS_BRANCH" == "kpwhri" ]; then ./kpwhri-before-deploy.sh; fi
 - if [ "$TRAVIS_BRANCH" == "justwalk" ]; then ./justwalk-before-deploy.sh; fi
 script:
 - docker-compose run server python manage.py test
@@ -30,6 +31,7 @@ after_success:
 - chmod +x gcloud-dev-deploy.sh
 - chmod +x kpwhri-deploy.sh
 - if [ "$TRAVIS_BRANCH" == "master" ]; then ./gcloud-dev-deploy.sh; fi
+- if [ "$TRAVIS_BRANCH" == "kpwhri" ]; then ./kpwhri-deploy.sh; fi
 - if [ "$TRAVIS_BRANCH" == "justwalk" ]; then ./justwalk-deploy.sh; fi
 notifications:
   slack:
