added google-cloud-sdk-gke-gcloud-auth-plugin, created kpwhri-before-deploy.sh, changed .travis.yaml

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,7 @@ dev-credentials/.env-development
 dev-credentials/.env-gcloud-dev
 dev-credentials/gcloud-dev-service-account.json
 dev-credentials.tar.gpg
+client/app-release.apk
+client/app.aab
+justwalk_secrets/
+server/justwalk.env
